codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__user_prompt_submit_app_server_hook_notifications_render_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: combined
---
• 钩子已停止
  └ go-workflow must start from PlanMode
  └ prompt blocked
