codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_required_fallback_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  无 法 使 用 管 理 员 权 限 设 置 沙 箱

  你 的 组 织 要 求 先 启 用 默 认 沙 箱 ， Codex 才 能 继 续 。
  了 解 详 情  <https://developers.openai.com/codex/windows>

› 1. 重 新 尝 试 设 置 管 理 员 沙 箱
  2. 退 出

  按  enter 确 认 ， 或 按  esc 返 回
