codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_setup_fresh_clock.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "setup.replace(&chat.config.cwd.display().to_string(), \"[CWD]\")"
---
• Setting up sandbox... (0s)
  └ Hang tight, this may take a few minutes


› Input disabled until setup completes.

  GPT-5.6-Sol 默 认  · [CWD]
