codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_unelevated_policy.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 100)"
---
  设 置  Codex 智 能 体 沙 箱 ， 以 保 护 文 件 并 控 制 网 络 访 问 。 了 解 详 情
  <https://developers.openai.com/codex/windows>

› 1. 使 用 非 管 理 员 沙 箱 （ 提 示 词 注 入 风 险 较 高 ）
  2. 退 出

  按  enter 确 认 ， 或 按  esc 返 回
